--- a/style.css
+++ b/style.css
@@ -3,7 +3,9 @@
   height: 200px;
   position: relative;
   perspective: 1000px;
-  margin: 50px;
+  margin: 50px auto;
+  transform-style: preserve-3d;
+  transition: transform 0.5s;
 }
 
 .card-face {
@@ -25,10 +27,6 @@
   transform: rotateY(180deg);
 }
 
-.card.flipped .card-front {
-  transform: rotateY(-180deg);
-}
-
-.card.flipped .card-back {
-  transform: rotateY(0);
+.card.flipped {
+  transform: rotateY(180deg);
 }
